# graphics

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp  notes.txt  run.sh  test.ppm
old_src/: Makefile  image_test.cpp  raytracer.cpp
old_src/core/: README.md
old_src/raytracer/common/: material.h
old_src/raytracer/renderer/: renderer.cpp  renderer.h  renderer_utils.h  world.cpp  world.h
old_src/raytracer/shapes/: intersectable.h  plane.cpp  plane.h  sphere.cpp
old_src/raytracer/tests/: hw3tenthousand.txt
old_src/raytracer/utils/: scene_parser.h
src/: Makefile  main.cpp  raytracer.cpp
src/core/: color.h  image.h  ppm_image.cpp  ppm_image.h
src/materials/: all_materials.h  diffuse.h  material.h
src/math/: README.md  fast_math.h  math.h  math_utils.h  vec.h  vec_utils.h  vector.h  vector3.h
src/objects/: all_objects.h  intersectable.h  intersectable_list.h  plane.h  sphere.h  triangle.h
src/objects/intersectables/: all_intersectables.h  intersectable.h  intersectable_list.h  plane.h  sphere.h  triangle.h
src/objects/lights/: all_lights.h  bulb.h  light.h  sun.h
src/raytracer/: Makefile  README.md  driver.cpp  driver.h  main.cpp  scene_parser.h  utils.h
src/raytracer/renderer/: renderer.cpp  renderer.h  renderer_utils.h
src/raytracer/shapes/: intersectable.h  plane.h  shape.h  shape_utils.h  sphere.h
src/raytracer/utils/: scene_parser.cpp
src/renderer/: camera.h  renderer.h  scene.h
src/utils/: color.h  image.cpp  image.h  ray.h  scene_parser.h  vertex.h
tests/: mytest.txt
